hh/vdsp/vDSP_util.h

/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[0] + (B[0] - A[0]) * n/(N-1);
*/

// Vector generate by extrapolation and interpolation.
extern void vDSP_vgenp(const float *__A, vDSP_Stride __IA, const float *__B,
                       vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                       vDSP_Length __N,
                       vDSP_Length __M) // Length of A and of B.
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgenpD(const double *__A, vDSP_Stride __IA, const double *__B,
                        vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                        vDSP_Length __N,
                        vDSP_Length __M) // Length of A and of B.
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[trunc(B[n])];
*/

// Vector interpolation between vectors.
extern void vDSP_vintb(const float *__A, vDSP_Stride __IA, const float *__B,
                       vDSP_Stride __IB, const float *__C, float *__D,
                       vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vintbD(const double *__A, vDSP_Stride __IA, const double *__B,
                        vDSP_Stride __IB, const double *__C, double *__D,
                        vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            if (B[0] <= A[n])
                D[n] = +C[0];
            else
                D[n] = -C[0];
*/

// Vector linear interpolation.
extern void vDSP_vlint(const float *__A, const float *__B, vDSP_Stride __IB,
                       float *__C, vDSP_Stride __IC, vDSP_Length __N,
                       vDSP_Length __M) // Nominal length of A, but not used.
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vlintD(const double *__A, const double *__B, vDSP_Stride __IB,
                        double *__C, vDSP_Stride __IC, vDSP_Length __N,
                        vDSP_Length __M) // Nominal length of A, but not used.
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = -A[n];
*/

// Vector polynomial.
extern void vDSP_vpoly(const float *__A, vDSP_Stride __IA, const float *__B,
                       vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                       vDSP_Length __N,
                       vDSP_Length __P) // P is the polynomial degree.
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vpolyD(const double *__A, vDSP_Stride __IA, const double *__B,
                        vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                        vDSP_Length __N,
                        vDSP_Length __P) // P is the polynomial degree.
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            E[n] = sqrt((A[n]-C[n])**2 + (B[n]-D[n])**2);
*/

// Vector quadratic interpolation.
extern void vDSP_vqint(const float *__A, const float *__B, vDSP_Stride __IB,
                       float *__C, vDSP_Stride __IC, vDSP_Length __N,
                       vDSP_Length __M) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vqintD(const double *__A, const double *__B, vDSP_Stride __IB,
                        double *__C, vDSP_Stride __IC, vDSP_Length __N,
                        vDSP_Length __M) API_AVAILABLE(macos(10.4), ios(4.0));